--- a/lang/es.json
+++ b/lang/es.json
@@ -132,8 +132,7 @@
     "modulename": "Nombre del módulo",
     "months": "Meses",
     "moodlehelp": "Ayuda",
-    "mootes14": "Programa",
-    "mycourses": "El evento",
+    "mycourses": "Mis Cursos",
     "myfiles": "Mis archivos",
     "name": "Nombre",
     "networkerror": "Conexión no disponible",
