--- a/lang/es.json
+++ b/lang/es.json
@@ -152,7 +152,7 @@
     "offlinemode": "Modo desconectado",
     "ok": "OK",
     "openinbrowser": "Abrir en navegador",
-    "participants": "Asistentes",
+    "participants": "Alumnos Matriculados",
     "password": "Contraseña",
     "passwordlabel": "Contraseña",
     "passwordnotnull": "Por favor indica tu contraseña",
